simple tag change

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   </head>
   <body>
     <script src="fetch.js"></script>
-    
     <h1>Low circulating supply with an ideal market cap</h1>
     <div id="container">
       <div class="tradingview-widget-container">
-        <div id="tradingview_44f68"></div>
+        <d id="tradingview_44f68"></d>
       <!-- List of cryptos will be added here dynamically-->
     </div>
   </body>
